--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Form/title>
-</head>
-<main>
-<body>
-    
-</body>
-</main>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Survey Form</title>
+    </head>
+    <header>
+        <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
+        <h1 id="title">Fruit Survey</h1>
+        <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
+        <p id="survey-form"><em>Thank you for contributing to our survey of
+                favorite fruits.</em></p>
+    </header>
+    <main>
+        <body>
+
+        </body>
+    </main>
 </html>
