--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
         <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
         <h1 id="title">Fruit Survey</h1>
         <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
-        <p id="survey-form"><em>Thank you for contributing to our survey of
+        <p id="description"><em>Thank you for contributing to our survey of
                 favorite fruits.</em></p>
     </header>
     <main>
         <body>
+            <section class="form">
+                <!-- User Story #3: I can see a form with id="survey-form". -->
+                <form id="survey-form">
+                    <input type="text" name="email" placeholder="E-mail address
+                        here..."><br>
+                    <input type="radio" name="fruit value="Mandarin Oranges">Mandarin Oranges<br>
+                    <input type="radio" name="fruit" value="Lychee">Lychee<br>
+                    <input type="radio" name="fruit" value="Bananas">Bananas<br>
 
+                </form>
+            </section>
         </body>
     </main>
 </html>
