--- a/index.html
+++ b/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Survey Form</title>
-    </head>
-    <header>
-        <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
-        <h1 id="title">Fruit Survey</h1>
-        <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
-        <p id="description"><em>Thank you for contributing to our survey of
-                favorite fruits.</em></p>
-    </header>
-    <main>
-        <body>
-            <section class="form">
-                <!-- User Story #3: I can see a form with id="survey-form". -->
-                <form id="survey-form">
-                    <input type="text" name="email" placeholder="E-mail address
-                        here..."><br>
-                    <input type="radio" name="fruit value="Mandarin Oranges">Mandarin Oranges<br>
-                    <input type="radio" name="fruit" value="Lychee">Lychee<br>
-                    <input type="radio" name="fruit" value="Bananas">Bananas<br>
 
-                </form>
-            </section>
-        </body>
-    </main>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="mediaquery.css" .css">
+    <title>Form</title>
+</head>
+<header>
+    <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
+    <h1 id="title">Fruit Survey</h1>
+    <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
+    <p id="description"><em>Thank you for contributing to our survey of
+            favorite fruits.</em></p>
+</header>
+<main>
+
+    <body>
+        <section class="form">
+            <!-- User Story #3: I can see a form with id="survey-form". -->
+            <form id="survey-form">
+                <input type="radio" name="fruit" value="Mandarin Oranges">Mandarin Oranges<br>
+                <input type="radio" name="fruit" value="Lychee">Lychee<br>
+                <input type="radio" name="fruit" value="Bananas">Bananas<br>
+                <!-- User Story #4: Inside the form element, I am required to enter my name in a field with id="name". -->
+                <input id="name" type="text" name="name" placeholder="Enter your name"><br>
+                <!-- User Story #5: Inside the form element, I am required to enter an email in a field with id="email". -->
+                <!-- User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. -->
+                <input id="email" type="text" name="email" placeholder="E-mail address
+                        here..."><br>
+            </form>
+        </section>
+    </body>
+</main>
+
 </html>
+
+
+
+
+
+<!-- 
+
+User Story #7: Inside the form, I can enter a number in a field with id="number".
+
+User Story #8: If I enter non-numbers in the number input, I will see an HTML5 validation error.
+
+User Story #9: If I enter numbers outside the range of the number input, which are defined by the min and max attributes, I will see an HTML5 validation error.
+
+User Story #10: For the name, email, and number input fields inside the form I can see corresponding labels that describe the purpose of each field with the following ids: id="name-label", id="email-label", and id="number-label".
+
+User Story #11: For the name, email, and number input fields, I can see placeholder text that gives me a description or instructions for each field.
+
+User Story #12: Inside the form element, I can select an option from a dropdown that has a corresponding id="dropdown".
+
+User Story #13: Inside the form element, I can select a field from one or more groups of radio buttons. Each group should be grouped using the name attribute.
+
+User Story #14: Inside the form element, I can select several fields from a series of checkboxes, each of which must have a value attribute.
+
+User Story #15: Inside the form element, I am presented with a textarea at the end for additional comments.
+
+User Story #16: Inside the form element, I am presented with a button with id="submit" to submit all my inputs. -->
