--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="mediaquery.css" .css">
-    <title>Form</title>
-</head>
-<header>
-    <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
-    <h1 id="title">Fruit Survey</h1>
-    <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
-    <p id="description"><em>Thank you for contributing to our survey of
-            favorite fruits.</em></p>
-</header>
 <main>
-
-    <body>
-        <section class="form">
-            <!-- User Story #3: I can see a form with id="survey-form". -->
-            <form id="survey-form">
-                <input type="radio" name="fruit" value="Mandarin Oranges">Mandarin Oranges<br>
-                <input type="radio" name="fruit" value="Lychee">Lychee<br>
-                <input type="radio" name="fruit" value="Bananas">Bananas<br>
-                <!-- User Story #4: Inside the form element, I am required to enter my name in a field with id="name". -->
-                <input id="name" type="text" name="name" placeholder="Enter your name"><br>
-                <!-- User Story #5: Inside the form element, I am required to enter an email in a field with id="email". -->
-                <!-- User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. -->
-                <input id="email" type="text" name="email" placeholder="E-mail address
-                        here..."><br>
-            </form>
+    <header>
+        <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
+        <section>
+            <div class="coffee-header"><img src="images/header2.jpg" alt="coffee mug with decorative leaf beside it">
+                <!-- <div class="header-text">
+                    <p>Life happens, but coffee helps.</p>
+                    <p>A form for coffee-lovers everywhere.</p>
+                </div>
+            </div>
+            <h1 id="title">About Our Survey</h1>
+            User Story #2: I can see a short explanation with id="description" in P sized text.
+                <p id="description"><em>Thank you for contributing to our survey of
+                        coffee consumption.</em></p> -->
         </section>
+    </header>
+
+
+
+
+
+
+
+
+    <!-- <body> -->
+    <!-- <section class="form"> -->
+    <!-- User Story #3: I can see a form with id="survey-form". -->
+    <!-- <form id="survey-form">
+        <input type="radio" name="fruit" value="Mandarin Oranges">Mandarin Oranges<br>
+        <input type="radio" name="fruit" value="Lychee">Lychee<br>
+        <input type="radio" name="fruit" value="Bananas">Bananas<br> -->
+    <!-- User Story #4: Inside the form element, I am required to enter my name in a field with id="name". -->
+    <!-- <input id="name" type="text" name="name" placeholder="Enter your name"><br> -->
+    <!-- User Story #5: Inside the form element, I am required to enter an email in a field with id="email". -->
+    <!-- User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. -->
+    <!-- <input id="email" type="text" name="email" placeholder="E-mail address
+                        here..."><br>
+        <img src="images/coffeeheader.jpg"><br>
+        <div><img src="images/coffeestats.jpg"></div>
+        <img src="images/coffeemethods.jpg"><br>
+
+        <div class="video"><video src="videos/coffeecup.mp4" autoplay muted loop></div>
+    </form>
+    </section>
     </body>
+    <footer>
+
+    </footer> -->
 </main>
 
 </html>
