--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="mediaquery.css" .css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap" rel="stylesheet">
+  <title>Coffee Survey</title>
+</head>
 <main>
-    <header>
-        <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
-        <section>
-            <div class="coffee-header"><img src="images/header2.jpg" alt="coffee mug with decorative leaf beside it">
-                <!-- <div class="header-text">
-                    <p>Life happens, but coffee helps.</p>
-                    <p>A form for coffee-lovers everywhere.</p>
-                </div>
-            </div>
-            <h1 id="title">About Our Survey</h1>
-            User Story #2: I can see a short explanation with id="description" in P sized text.
-                <p id="description"><em>Thank you for contributing to our survey of
-                        coffee consumption.</em></p> -->
-        </section>
-    </header>
-
-
-
-
-
-
-
-
-    <!-- <body> -->
-    <!-- <section class="form"> -->
-    <!-- User Story #3: I can see a form with id="survey-form". -->
-    <!-- <form id="survey-form">
-        <input type="radio" name="fruit" value="Mandarin Oranges">Mandarin Oranges<br>
-        <input type="radio" name="fruit" value="Lychee">Lychee<br>
-        <input type="radio" name="fruit" value="Bananas">Bananas<br> -->
-    <!-- User Story #4: Inside the form element, I am required to enter my name in a field with id="name". -->
-    <!-- <input id="name" type="text" name="name" placeholder="Enter your name"><br> -->
-    <!-- User Story #5: Inside the form element, I am required to enter an email in a field with id="email". -->
-    <!-- User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. -->
-    <!-- <input id="email" type="text" name="email" placeholder="E-mail address
-                        here..."><br>
-        <img src="images/coffeeheader.jpg"><br>
-        <div><img src="images/coffeestats.jpg"></div>
-        <img src="images/coffeemethods.jpg"><br>
-
-        <div class="video"><video src="videos/coffeecup.mp4" autoplay muted loop></div>
-    </form>
+  <header>
+    <section>
+      <div class="header">
+        <img class="header-img" src="images/header2.jpg" alt="lattes served around decorative plants">
+      </div>
+      <div class="header-text">
+        <p>
+        <h1>Life happens, coffee helps</h1>
+        </p>
+        <p>Start the day off on the right foot.</p>
+      </div>
     </section>
-    </body>
-    <footer>
+  </header>
 
-    </footer> -->
+  <body>
+    <div><img src="images/bodyim1.jpg" alt="statistics about coffee consumption in the US"></div>
+    <div><img src="images/coffeestats.jpg" alt="breakdown of coffee statistics in the US"></div>
+    <div class="survey-description">
+      <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
+      <p>
+      <h1 id="title">About Our Survey</h1>
+      </p>
+      <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
+      <p id="description"><em>We want to know more about your daily
+          coffee consumption to better service our clients' preferences.</em></p>
+    </div>
+    <!-- User Story #3: I can see a form with id="survey-form". -->
+    <div class="form">
+      <form id="survey-form">
+        <p>Name</p>
+        <!-- User Story #4: Inside the form element, I am required to enter my name in a field with id="name". -->
+        <input id="name" type="text" name="name" placeholder="Enter your name">
+      </form>
+    </div>
+
+    body
+  </body>
+  <footer>
+    footer
+  </footer>
 </main>
 
 </html>
 
-
-
-
-
+<!-- User Story #5: Inside the form element, I am required to enter an email in a field with id="email". -->
+<!-- User Story #6: If I enter an email that is not formatted correctly, I will see an HTML5 validation error. -->
 <!-- 
 
 User Story #7: Inside the form, I can enter a number in a field with id="number".
