added html & styling to footer

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <h1 id="title">About Our Survey</h1>
         <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
         <p>Everyday, our customers enjoy approximately 10,000 cups of coffee created by our finest baristas. We have
-          formulated a visual of the most frequently ordered types of coffee across our cafés.
+          formulated a visual of the most frequently ordered coffee beverages across our cafés.
         <div><img src="images/typesofcoffee.jpg" alt="various methods for drinking coffee"></div>
         <p id="description"><em>We want to know more about your daily
             coffee consumption to better service our customers' preferences and create an even greater experience for
-            valuable customers, like you.</em></p>
+            valuable customers like you. Thank you for your contribution!</em></p>
       </div>
     </section>
     <section class="form-design">
@@ -109,7 +109,10 @@
     </section>
   </main>
   <footer>
-    footer
+    <div class="footer-style">
+      <video src="videos/coffeecup.mp4" loop autoplay></video>
+      <h2>See you latté!</h2>
+    </div>
   </footer>
 </body>
 
