revised additional styling within form and main image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <main id="main">
     <section>
-      <div class="img1"><img src="images/bodyim1.jpg" alt="statistics about coffee consumption in the US"></div>
+      <div class="img1"><img src="images/bodyimg1.jpg" alt="statistics about coffee consumption in the US"></div>
       <div class="img2"><img src="images/coffeestats.jpg" alt="breakdown of coffee statistics in the US"></div>
       <div class="survey-description">
         <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
