--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
   </main>
   <footer>
     <div class="footer-style">
-      <video src="videos/coffeecup.mp4" loop autoplay></video>
+      <video autoplay loop>
+        <source src="videos/coffeecup.mp4" type="video/mp4">
+      </video>
       <h2>See you latté!</h2>
     </div>
   </footer>
