--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <!-- User Story #1: I can see a title with id="title" in H1 sized text. -->
         <h1 id="title">About Our Survey</h1>
         <!-- User Story #2: I can see a short explanation with id="description" in P sized text. -->
-        <p id="description"><strong>Everyday, our customers enjoy approximately 10,000 cups of coffee created by our
-            finest
-            baristas. We have
-            formulated a visual of the most frequently ordered coffee beverages across our cafés.</strong>
+        <p id="description">Everyday, our customers enjoy approximately 10,000 cups of coffee created by our
+          finest
+          baristas. We have
+          formulated a visual of the most frequently ordered coffee beverages across our cafés.
         <div class="img3"><img src="images/typesofcoffee.jpg" alt="various methods for drinking coffee"></div>
-        <p id="description"><strong><em>We want to know more about your daily
-              coffee consumption to better service our customers' preferences and create an even greater experience for
-              valuable customers like you. Thank you for your contribution!</em></strong></p>
+        <p id="description"><em>We want to know more about your daily
+            coffee consumption to better service our customers' preferences and create an even greater experience for
+            valuable customers like you. Thank you for your contribution!</em></p>
       </div>
     </section>
     <section class="form-design">
