removed header section and header class

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 
 <body>
   <header>
-    <section class="header-position">
-      <div class="header">
-        <img class="header-img" src="images/header2.jpg" alt="lattes served around decorative plants">
-      </div>
-      <div class="header-text">
-        <h1>Life happens, coffee helps</h1>
-        <p>Start the day off on the right foot.</p>
-      </div>
-    </section>
+    <div class="header-img-container">
+      <img class="header-img" src="images/header2.jpg" alt="lattes served around decorative plants">
+    </div>
+    <div class="header-text">
+      <h1>Life happens, coffee helps</h1>
+      <p>Start the day off on the right foot.</p>
+    </div>
   </header>
 
   <main id="main">
