removed divs from main image and styled child tags based on section parents

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   </header>
 
   <main id="main">
-    <section>
-      <div class="img1"><img src="images/bodyimg1.jpg" alt="statistics about coffee consumption in the US"></div>
-      <div class="img2"><img src="images/coffeestats.jpg" alt="breakdown of coffee statistics in the US"></div>
-      <div class="survey-description">
-        <h1 id="title">About Our Survey</h1>
-        <p id="description">Everyday, our customers enjoy approximately 10,000 cups of coffee created by our
-          finest
-          baristas. We have
-          formulated a visual of the most frequently ordered coffee beverages across our cafés.
-        <div class="img3"><img src="images/typesofcoffee.jpg" alt="various methods for drinking coffee"></div>
-        <p id="description"><em>We want to know more about your daily
-            coffee consumption to better service our customers' preferences and create an even greater experience for
-            valuable customers like you. Thank you for your contribution!</em></p>
-      </div>
+    <section class="coffee-facts">
+      <img src="images/bodyimg1.jpg" alt="statistics about coffee consumption in the US">
+      <img src="images/coffeestats.jpg" alt="breakdown of coffee statistics in the US">
+    </section>
+    <section class="survey-purpose">
+      <h1>About Our Survey</h1>
+      <p>Everyday, our customers enjoy approximately 10,000 cups of coffee created by our
+        finest
+        baristas. We have
+        formulated a visual of the most frequently ordered coffee beverages across our cafés.
+        <img src="images/typesofcoffee.jpg" alt="various methods for drinking coffee">
+      <p><em>We want to know more about your daily
+          coffee consumption to better service our customers' preferences and create an even greater experience for
+          valuable customers like you. Thank you for your contribution!</em></p>
     </section>
     <section class="form-design">
       <form id="survey-form">
