--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
     <section class="form-design">
       <form id="survey-form">
         <div class="form-group">
-          <label id="name-label" for="name">Name</label>
-          <input id="name" class="form-control" type="text" name="name" placeholder="Enter your Name" required>
+          <label id="name-label" for="name"><strong>Name</strong></label>
+          <input id="name" class="form-control" type="text" name="name" required>
         </div>
         <div class="form-group">
-          <label id="email-label" for="email">Email</label>
-          <input id="email" class="form-control" type="text" name="email" placeholder="Enter your Email" required>
+          <label id="email-label" for="email"><strong>Email</strong></label>
+          <input id="email" class="form-control" type="text" name="email" required>
         </div>
-        <div class="form-group"><label id="number-label" for="age">Age (optional)</label>
-          <input id="number" class="form-control" type="number" name="age" placeholder="Age" min="10" max="99">
+        <div class="form-group"><label id="number-label" for="age"><strong>Age (optional)</strong></label>
+          <input id="number" class="form-control" type="number" name="age" min="10" max="99">
         </div>
-        <div class="form-group"><label class="job-label" for="job">Which option best describes your current
-            role?</label>
+        <div class="form-group"><label class="job-label" for="job"><strong>Which option best describes your current
+              role?</strong></label>
           <select id="dropdown" class="form-control">
             <option value="Role">Select current role</option>
             <option value="Student">Student</option>
@@ -64,16 +64,16 @@
           </select>
         </div>
         <div class="form-group">
-          <label class="consumption-label" for="consumption">How many cups of coffee do you typically drink
-            daily?</label>
+          <label class="consumption-label" for="consumption"><strong>How many cups of coffee do you typically drink
+              daily?</strong></label>
           <label><input class="cups" type="radio" name="consumption">1 cup</label>
           <label><input class="cups" type="radio" name="consumption">2 cups</label>
           <label><input class="cups" type="radio" name="consumption">3 cups</label>
           <label><input class="cups" type="radio" name="consumption">4 cups or more</label>
         </div>
         <div class="form-group">
-          <label class="favorite-label" for="favorite">Which is your favorite way to drink coffee? (Check all that
-            apply)</label>
+          <label class="favorite-label" for="favorite"><strong>Which is your favorite way to drink coffee?
+              (Check all that apply) </strong></label>
           <label><input class="cups" type="checkbox" value="favorite">Black</label>
           <label><input class="cups" type="checkbox" value="favorite">Latte</label>
           <label><input class="cups" type="checkbox" value="favorite">Cappuccino</label>
@@ -84,7 +84,7 @@
           <label><input class="cups" type="checkbox" value="favorite">Affogato</label>
         </div>
         <div class="form-group">
-          <label>What are some ways in which we can better your experience at our cafés?</label>
+          <label><strong>What are some ways in which we can better your experience at our cafés?</strong></label>
           <textarea id="comments" class="input-textarea" name="comment"
             placeholder="Enter your comment here"></textarea>
         </div>
