--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <textarea id="comments" class="input-textarea" name="comment"
             placeholder="Enter your comment here"></textarea>
         </div>
-        <input id="submit" type="submit" value="Submit">
+        <input id="submit" class="button" type="submit" value="Submit">
       </form>
     </section>
   </main>
